******

    gnome-mplayer is currently in a heavy state of changes 
    
    Known broken items
    
    DVD w/o menu playback
    TV playback
    
    Media Info - Artist, Title, Album, etc...
******


Development
    Fix problem with media player state event triggering before the state was true
    Remove event flushing where possible
    Fix initial OSD Level setting
    Rework gnome-mplayer restart, should work better now
    Only emit the position-changed signal when position actually changes, lowers CPU usage 
    Keyboard shortcuts should work now
    Complete send_command removal
    More features for gmtk_media_player
    Switch from specific API call for mplayer commands to generic command submission
    Keep purging send_command
    Enable more features in gmtk_media_player: frame_drop, audio_delay, and sub_delay
    Fix environment detection issues
    Fix known memory leak in gmtk_media_player
    Remove uri, windowid variables from idledata
    Remove seekable, x, y, last_x, last_y, sub_visible, sub_demux, switch_audio variables from idledata
    Remove video properties from idledata
    Remove global variable dvd_title_is_menu
    Fix problem with dvb/tv parser Issue #508
    Fix window size issue when no media is loaded
    Start work on playlist issues
    Add gmtk_media_player_switch_angle
    When restarting player, do not emit events
    Fix fallback to alternate protocols on error, fixes web playback
    Fix window size issue when opening details with non-standard window size
    Make audio meter work in GTK3 mode
    Make audio meter work in GTK2 mode
    Remove some IdleData properties
    Make Details display correct data
    Update tracker label on media change
    Remove allocate_fixed_callback
    Fix crash when setting preferences when no file is loaded
    Make extra opts work
    Fix preference setting
    Make DVD playback from ISO and Folders work
    Bring set_gui_state back, as it is needed for RealPlayer emulation