@@ -2675,6 +2675,7 @@ void menuitem_open_dvd_callback(GtkMenuItem * menuitem, void *data)
         g_free(idledata->device);
         idledata->device = NULL;
     }
+    gmtk_media_player_set_state(GMTK_MEDIA_PLAYER(media), MEDIA_STATE_QUIT);
     parse_dvd("dvd://");
 
     if (gtk_tree_model_get_iter_first(GTK_TREE_MODEL(playliststore), &iter)) {
@@ -2765,6 +2766,7 @@ void menuitem_open_dvdnav_callback(GtkMenuItem * menuitem, void *data)
         g_free(idledata->device);
         idledata->device = NULL;
     }
+    gmtk_media_player_set_state(GMTK_MEDIA_PLAYER(media), MEDIA_STATE_QUIT);
     add_item_to_playlist("dvdnav://", 0);
     gtk_tree_model_get_iter_first(GTK_TREE_MODEL(playliststore), &iter);
     gmtk_media_player_set_media_type(GMTK_MEDIA_PLAYER(media), TYPE_DVD);
